# balances

./: .gitignore  Makefile  README.md  aforronet.py  anchor.py  build.py  caixabreak.py  celsius.py  cryptocom.py  degiro.py  fidelity.py  financas.py  ibfetch.py  ibkr.py  kucoin.py  kucoinx.py  luna20.py  metamask.py  plutus.py  pyproject.toml  requirements_dev.txt  snailtrail.py  test_run.py
.github/: dependabot.yml
.github/workflows/: main.yml  test.yml
aforronet/: main.py  pyproject.toml
archive/: anchor.py  caixabreak.py  celsius.py  luna20.py  plutus.py  snailtrail.py
archive/fidelity/: main.py  requirements.txt
archive/requirements/: requirements_snailtrail.txt
builder/: cli.py  image.py
common/: hass.py  webdriver.py
common/cli/: __init__.py  fx.py  otp.py  selenium.py
common/cli_ng/: __init__.py  fx.py  otp.py  selenium.py  sms_auth.py  tgquery.py
cryptocom/: main.py
degiro/: main.py  requirements.txt
docker/: Dockerfile  Dockerfile.base  Dockerfile.ng  entrypoint.sh
fidelity/: main.py  requirements.txt
financas/: main.py  requirements.txt
ibkr/: main.py  requirements.txt
kucoin/: __main__.py  main.py  requirements.txt
libs/balances_cli/: __init__.py  hass.py  pyproject.toml
libs/balances_fx/: __init__.py  pyproject.toml
libs/balances_otp/: __init__.py  pyproject.toml
libs/balances_selenium/: __init__.py  pyproject.toml  webdriver.py
libs/balances_sms_auth/: __init__.py  pyproject.toml
libs/balances_tgquery/: __init__.py  __main__.py  pyproject.toml
metamask/: main.py
requirements/: requirements_common.txt  requirements_common_ng.txt  requirements_common_selenium.txt  requirements_degiro.txt  requirements_fidelity.txt  requirements_ibkr.txt  requirements_kucoin.txt  requirements_kucoinx.txt  requirements_plutus.txt
