[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "balances-cli"
version = "0.1.0"
description = "Shared CLI helpers for balances scrapers"
requires-python = ">=3.10"
dependencies = [
    "classyclick==0.6.2",
    "requests==2.32.5",
]

[tool.setuptools]
packages = ["balances_cli"]

[tool.setuptools.package-dir]
balances_cli = "."
