[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "balances-fx"
version = "0.1.0"
description = "Shared FX helpers for balances scrapers"
requires-python = ">=3.10"
dependencies = [
    "requests==2.32.5",
]

[tool.setuptools]
packages = ["balances_fx"]

[tool.setuptools.package-dir]
balances_fx = "."
