[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "balances-selenium"
version = "0.1.0"
description = "Shared Selenium CLI helpers for balances scrapers"
requires-python = ">=3.10"
dependencies = [
    # FIXME: depend on balances_cli (but cannot specify local relative path...)
    "selenium==4.35.0",
]

[tool.setuptools]
packages = ["balances_selenium"]

[tool.setuptools.package-dir]
balances_selenium = "."
