[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "balances-sms-auth"
version = "0.1.0"
description = "Shared SMS auth helpers for balances scrapers"
requires-python = ">=3.10"
dependencies = [
    # FIXME: depend on balances_cli AND balances_tgquery (but cannot specify local relative path...)
]

[tool.setuptools]
packages = ["balances_sms_auth"]

[tool.setuptools.package-dir]
balances_sms_auth = "."
